fix[todays workout card]fixed title overflowing

--- a/src/components/ExternalEvent/ExternalEvent.scss
+++ b/src/components/ExternalEvent/ExternalEvent.scss
@@ -2,7 +2,7 @@
   height: 50px;
   width: 100%;
   background-color: #3788d8;
-//   background-color: #2196f3;
+  //   background-color: #2196f3;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -12,18 +12,40 @@
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
+.exernal-event__creator {
+
+  font-family: "Manrope", sans-serif;
+  font-size: 20px;
+  max-width: 600px;
+  width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  margin: 20px 0 0 0;
+}
+
 @media (max-width: 979px) {
-    .calendar-event{
-        width: auto;
-        min-width: 120px;
-        height: 40px;
-        max-width:120px
-    }
+  .calendar-event {
+    width: auto;
+    min-width: 120px;
+    height: 40px;
+    max-width: 120px;
+  }
 }
 
 @media (max-width: 550px) {
-    .calendar-event{
-        min-width: 100px;
-        height: 30px;
-    }
+  .calendar-event {
+    min-width: 100px;
+    height: 30px;
+  }
+
+  .exernal-event__creator {
+    font-family: "Manrope", sans-serif;
+    font-size: 16px;
+
+    width: 100%;
+
+  }
 }
+
+
