--- a/src/pages/Profile/Profile.scss
+++ b/src/pages/Profile/Profile.scss
@@ -19,8 +19,8 @@
 
 .profile-info-container {
   height: 240px;
-  width: 50%;
-
+  width: 100%;
+  max-width: 350px;
   display: flex;
   flex-direction: column;
   align-items: center;
